--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
             loop:true
         })
     </script>
+    <script>
+    a = 22
+    b = "iMgay"
+    do {
+       a = prompt("Password to Play the game: ")
+        
+    } while (a!=b);
+    </script>
+
 
     
 </body>
